--- a/index.html
+++ b/index.html
@@ -572,8 +572,10 @@
         <button class="tab" onclick="showYear('2020')">2020年</button>
         <button class="tab" onclick="showYear('2021')">2021年</button>
         <button class="tab" onclick="showYear('2022')">2022年</button>
-	<button class="tab" onclick="showYear('2023')">2023年</button>
-	<button class="tab active" onclick="showYear('2024')">2024年</button>
+		<button class="tab" onclick="showYear('2023')">2023年</button>
+		<button class="tab" onclick="showYear('2024')">2024年</button>
+		<button class="tab active" onclick="showYear('2025')">2025年</button>
+
     </div>
 
     <div id="2017" class="content">
@@ -1009,6 +1011,142 @@
             <td>七維思直播 @1225</td>
             <td>Linux 滲透測試</td>
         </tr>
+    </table>
+</div>
+
+<div id="2025" class="content">
+    <table>
+        <tr>
+            <th>演講/授課單位</th>
+            <th>主題</th>
+        </tr>
+
+        <tr>
+            <td>2025 微風集團</td>
+            <td>AI資安（05/19）</td>
+        </tr>
+
+        <tr>
+            <td>2025 遠通電收</td>
+            <td>生活中的公開情資與釣魚威脅（06/12）</td>
+        </tr>
+        <tr>
+            <td>2025 HITCON</td>
+            <td>CR 說明會（06/10）</td>
+        </tr>
+        <tr>
+            <td>2025 龍寶建設</td>
+            <td>資安與你我的距離（06/17）</td>
+        </tr>
+        <tr>
+            <td>2025 七維思直播</td>
+            <td>系列課程（06/23, 08/27, 09/24, 10/29, 10/30）</td>
+        </tr>
+        <tr>
+            <td>2025 無國界醫師組織</td>
+            <td>生活中的公開情資與釣魚威脅（07/03）</td>
+        </tr>
+        <tr>
+            <td>2025 資策會</td>
+            <td>資安課程（07/09）</td>
+        </tr>
+        <tr>
+            <td>2025 交通大學資安課程</td>
+            <td>大語言模型安全（07/30）</td>
+        </tr>
+        <tr>
+            <td>2025 公務人員訓練</td>
+            <td>大語言模型安全（07/31）</td>
+        </tr>
+        <tr>
+            <td>2025 屏東縣衛生局</td>
+            <td>資安課程（08/01）</td>
+        </tr>
+        <tr>
+            <td>2025 永豐銀行</td>
+            <td>AI資安（08/08）</td>
+        </tr>
+        <tr>
+            <td>2025 兆豐銀行</td>
+            <td>網站進階安全（08/07）</td>
+        </tr>
+        <tr>
+            <td>2025 兆豐銀行</td>
+            <td>IoT 物聯網安全實務與風險防範（08/14）</td>
+        </tr>
+		<tr>
+            <td>2025 中小企銀</td>
+            <td>物聯網安全（08/18）</td>
+        </tr>
+        <tr>
+            <td>2025 vLAB 資安知不知系列</td>
+            <td>零基礎也能當資安達人：AI 手把手教你（08/19）</td>
+        </tr>
+        <tr>
+            <td>2025 台灣經濟研究院</td>
+            <td>AI資安（08/29）</td>
+        </tr>
+        <tr>
+            <td>2025 財政部</td>
+            <td>資安實戰課程（09/04）</td>
+        </tr>
+        <tr>
+            <td>2025 台科大創業分享</td>
+            <td>資安人的創業副本攻略：從校園到 AI 時代的闖關之旅（09/09）</td>
+        </tr>
+        <tr>
+            <td>2025 台灣高鐵</td>
+            <td>資安課程（09/13）</td>
+        </tr>
+        <tr>
+            <td>2025 中山大學</td>
+            <td>資安與你我的距離（09/18）</td>
+        </tr>
+        <tr>
+            <td>2025 鐵道局</td>
+            <td>AI資安（09/19）</td>
+        </tr>
+        <tr>
+            <td>2025 移民署</td>
+            <td>資安意識培訓課程（09/21）</td>
+        </tr>
+        <tr>
+            <td>2025 開源軟體與DevSecOps</td>
+            <td>自動化工具（09/24）</td>
+        </tr>
+        <tr>
+            <td>2025 SSDLC 課程</td>
+            <td>安全軟體開發流程（10/21）</td>
+        </tr>
+        <tr>
+            <td>2025 資管書報</td>
+            <td>AI資安（10/01）</td>
+        </tr>
+        <tr>
+            <td>2025 誠品生活</td>
+            <td>資安課程（10/02）</td>
+        </tr>
+        <tr>
+            <td>2025 AI賦能工作術系列</td>
+            <td>提升工作效率（10/08, 10/14, 11/13, 11/14）</td>
+        </tr>
+        <tr>
+            <td>2025 逢甲大學</td>
+            <td>AI資安（10/31）</td>
+        </tr>
+        <tr>
+            <td>2025 無國界醫師組織</td>
+            <td>供應鏈安全教育訓練（11/13）</td>
+        </tr>
+        <tr>
+            <td>2025 言果學習</td>
+            <td>資安與你我的距離（11/24）</td>
+        </tr>
+        <tr>
+            <td>2025 高雄醫學院</td>
+            <td>資安與你我的距離（11/20）</td>
+        </tr>
+
     </table>
 </div>
 
