--- a/index.html
+++ b/index.html
@@ -1146,7 +1146,10 @@
             <td>2025 高雄醫學院</td>
             <td>資安與你我的距離（11/20）</td>
         </tr>
-
+        <tr>
+            <td>2025 JSDC 2025（JavaScript Developer Conference）</td>
+            <td>從攻擊到防禦：系統化學習網站安全與滲透測試的實戰思維（11/29）</td>
+        </tr>
     </table>
 </div>
 
@@ -1182,6 +1185,7 @@
             <div class="my-auto">
                 <h2 class="mb-5">榮譽事蹟</h2>
                 <ul class="fa-ul mb-0">
+                    <li><i class="fa-li fa fa-trophy text-warning"></i>2025 第17屆 iT 邦幫忙鐵人賽 Security 組 冠軍 - 資安這條路：AD 攻防實戰演練</li>
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2024 第16屆 iT 邦幫忙鐵人賽 Security 組 佳作 - 資安這條路：系統化學習藍隊技術</li>
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2023 第15屆 iT 邦幫忙鐵人賽 影片 組 佳作 - 資安 Vtuber 語野飛陪你讀新聞學資安知識 </li>
                     <li><i class="fa-li fa fa-trophy text-warning"></i>2023 行政院國家資通安全會報技術服務中心 資安技能金盾獎競賽 嶄露頭角獎</li>
