--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                     <!-- Bio -->
                     <div class="text-center md:text-left">
                         <h1 class="text-4xl md:text-5xl font-bold text-gray-900 mb-2">林子婷</h1>
-                        <p class="text-2xl md:text-3xl text-blue-600 font-medium mb-4">飛飛</p>
+                        <p class="text-2xl md:text-3xl text-blue-600 font-medium mb-4">飛飛 Fei Lin / Phoebe 菲比</p>
                         <p class="text-lg text-gray-600 mb-6">資安專家 · OSCE3 · 七維思執行長</p>
 
                         <!-- Social Icons -->
